# Linux-tiscamera-Programming-Samples

Save an image using OpenCV in C++/: CMakeLists.txt  CMakeLists_.txt  common.cpp  image_saver.cpp  main.cpp  tcamcamera.cpp  tcamcamera.h  test_yaml_cpp.cpp
Save an image using OpenCV in C++/cfg/: tis_camera_cfg.yaml
Save an image using OpenCV in C++/include/: common.h  image_saver.h  tcamcamera.h
